# podcast-master

./: .gitignore  Cargo.toml  README.md  build.bash  index.html  metadata.html  styles.css
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
